fix : z-index on #lightbox & #like-price

--- a/sass/pages/photographer.scss
+++ b/sass/pages/photographer.scss
@@ -392,7 +392,7 @@ main {
     height: 100vh;
     transform: translate(-50%, -50%);
     background-color: #fff;
-    z-index: 2;
+    z-index: 3;
     .left, .right {
         cursor: pointer;
         position: fixed;
@@ -483,6 +483,7 @@ main {
     bottom: 0;
     background-color: #DB8876;
     font-weight: bold;
+    z-index: 3;
     @include mobiles {
         right: 0;
         height: 40px;
